Fixed warnings in fragment_settings.xml

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -63,7 +63,8 @@
 
         <LinearLayout
             android:id="@+id/editProfileRow"
-            style="@style/SettingsRowStyle">
+            style="@style/SettingsRowStyle"
+            tools:ignore="UseCompoundDrawables">
             <TextView
                 style="@style/SettingsRowTextStyle"
                 android:text="@string/edit_profile_label" />
