--- a/app/src/main/res/layout/fragment_new_expense.xml
+++ b/app/src/main/res/layout/fragment_new_expense.xml
@@ -48,9 +48,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/dateEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="false"
+            android:layout_height="154dp"
             android:clickable="true"
+            android:focusable="false"
             android:inputType="none" /> 
 
     </com.google.android.material.textfield.TextInputLayout>
