--- a/app/src/main/res/layout/item_category_budget.xml
+++ b/app/src/main/res/layout/item_category_budget.xml
@@ -1,57 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    app:cardCornerRadius="8dp"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardElevation="2dp">
 
-    <ImageView
-        android:id="@+id/categoryIconImageView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:srcCompat="@drawable/ic_category_food"
-        android:contentDescription="@string/category_icon_desc" />
-
-    <TextView
-        android:id="@+id/categoryNameTextView"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textAppearance="?attr/textAppearanceBody1"
-        app:layout_constraintStart_toEndOf="@id/categoryIconImageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/budgetAmountInputLayout"
-        tools:text="Food &amp; Dining" />
+        android:padding="12dp">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/budgetAmountInputLayout"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="120dp" 
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:hint="@string/hint_limit" 
-        app:prefixText="$"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        <ImageView
+            android:id="@+id/categoryIconImageView"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/categoryNameTextView"
+            app:layout_constraintBottom_toBottomOf="@+id/categoryNameTextView"
+            tools:srcCompat="@drawable/ic_category_food"
+            android:contentDescription="@string/category_icon_desc" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/budgetAmountEditText"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/categoryNameTextView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:imeOptions="actionDone"
-            android:gravity="end"
-            tools:text="500"/>
+            android:layout_marginStart="12dp"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
+            app:layout_constraintStart_toEndOf="@id/categoryIconImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/budgetAmountInputLayout"
+            tools:text="Food &amp; Dining" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/budgetAmountInputLayout"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
+            android:layout_width="120dp" 
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:hint="@string/hint_limit" 
+            app:prefixText="$"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout> 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/budgetAmountEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:gravity="end"
+                tools:text="500"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView> 
